Reject/throw when calling AudioContext methods on a stopped AudioContext https://bugs.webkit.org/show_bug.cgi?id=197391

Reviewed by Eric Carlson.

Source/WebCore:

Return InvalidStateError in that case.
ASSERT that we do not call lazyInitialize after being stopped
since this would mean we are doing unneeded processing.

Test: http/wpt/webaudio/audiocontext-stopped.html

* Modules/webaudio/AudioContext.cpp:
(WebCore::AudioContext::lazyInitialize):
(WebCore::AudioContext::createBufferSource):
(WebCore::AudioContext::createMediaElementSource):
(WebCore::AudioContext::createMediaStreamSource):
(WebCore::AudioContext::createMediaStreamDestination):
(WebCore::AudioContext::createScriptProcessor):
(WebCore::AudioContext::createBiquadFilter):
(WebCore::AudioContext::createWaveShaper):
(WebCore::AudioContext::createPanner):
(WebCore::AudioContext::createConvolver):
(WebCore::AudioContext::createDynamicsCompressor):
(WebCore::AudioContext::createAnalyser):
(WebCore::AudioContext::createGain):
(WebCore::AudioContext::createDelay):
(WebCore::AudioContext::createChannelSplitter):
(WebCore::AudioContext::createChannelMerger):
(WebCore::AudioContext::createOscillator):
(WebCore::AudioContext::createPeriodicWave):
(WebCore::AudioContext::startRendering):
(WebCore::AudioContext::suspend):
(WebCore::AudioContext::resume):
(WebCore::AudioContext::close):
* Modules/webaudio/AudioContext.h:
* Modules/webaudio/AudioContext.idl:

LayoutTests:

* http/wpt/webaudio/audiocontext-stopped-expected.txt: Added.
* http/wpt/webaudio/audiocontext-stopped.html: Added.
* http/wpt/webaudio/resources/audiocontext-stopped-iframe.html: Added.
* platform/win/TestExpectations: Skip test for win.


Canonical link: https://commits.webkit.org/211638@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244825 268f45cc-cd09-0410-ab3c-d52691b4dbfc